--- a/src/Components/chart_styling.css
+++ b/src/Components/chart_styling.css
@@ -4,14 +4,20 @@
   border-radius: 10px;
 }
 
-/* Style the tooltip container */
-.tooltip {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 8px;
-  border-radius: 4px;
-  z-index: 1; /* Ensure the tooltip appears above the chart */
-  display: none; /* Initially hide the tooltip */
-  white-space: nowrap; /* Prevent line breaks in tooltip content */
+/* Style the chart */
+.chart {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+/* Target the green line series */
+.green-line {
+  stroke: green; /* Change the stroke color */
+  stroke-width: 2px; /* Change the stroke width */
+}
+
+/* Target the red line series */
+.red-line {
+  stroke: red; /* Change the stroke color */
+  stroke-width: 3px; /* Change the stroke width */
 }
